comparison.css
body {
  width: 100vw;
  height: 100vh;
  margin: 0;
}

#control-panel {
  font-family: Helvetica, Arial, sans-serif;
  position: absolute;
  background: #fff;
  top: 0;
  left: 75%;
  /* right: 90%; */
  margin: 100px;
  padding: 20px;
  z-index: 1;
}

label {
  display: inline-block;
  width: 100px;
  margin: 0.4rem 0;
}

#tooltip {
  background: white;
  /* margin: 10px; */
  /* padding: 10px; */
}

#charts {
  position: absolute;
  display: flex;
  flex-direction: column;
  width: fit-content;
}

